added test chat and final details

--- a/pages/chat-test.html
+++ b/pages/chat-test.html
@@ -475,7 +475,203 @@
               <p class="last_connection">últ. vez hoy a la(s) 12:34</p>
             </div>
           </div>
-          <div class="chatbox__main--bg"></div>
+          <div class="chatbox__main chatbox__main--bg">
+            <div class="chatbox__msglog">
+              <div
+                class="chatbox__msglog__msgbox chatbox__msglog__msgbox--date"
+              >
+                <span class="msglog_date">29/4/2024</span>
+              </div>
+              <div
+                class="chatbox__msglog__msgbox chatbox__msglog__msgbox--other"
+              >
+                <span class="msg">
+                  <p class="msg__txt">Buenas, que tal todo?</p>
+                  <span>
+                    <span class="msg__timestatus">
+                      <p>22:35</p>
+                      <img
+                        src="../img/blue-double-tick.png"
+                        alt="read message"
+                      />
+                    </span>
+                  </span>
+                </span>
+                <svg
+                  viewBox="0 0 8 13"
+                  height="13"
+                  width="8"
+                  preserveAspectRatio="xMidYMid meet"
+                  class="tail-in"
+                  version="1.1"
+                  x="0px"
+                  y="0px"
+                  enable-background="new 0 0 8 13"
+                >
+                  <title>tail-in</title>
+                  <path
+                    opacity="0.13"
+                    fill="#0000000"
+                    d="M1.533,3.568L8,12.193V1H2.812 C1.042,1,0.474,2.156,1.533,3.568z"
+                  ></path>
+                  <path
+                    fill="currentColor"
+                    d="M1.533,2.568L8,11.193V0L2.812,0C1.042,0,0.474,1.156,1.533,2.568z"
+                  ></path>
+                </svg>
+              </div>
+              <div
+                class="chatbox__msglog__msgbox chatbox__msglog__msgbox--self"
+              >
+                <span class="msg">
+                  <p class="msg__txt">
+                    Todo bien, aquí terminando el WhatsApp FakeChallenge
+                  </p>
+                  <span class="msg__timestatus">
+                    <p>22:35</p>
+                    <img src="../img/blue-double-tick.png" alt="read message" />
+                  </span>
+                </span>
+                <span class="tail-out"
+                  ><svg
+                    viewBox=" 0 0 8 13 "
+                    height=" 13 "
+                    width="
+                  8 "
+                    preserveAspectRatio=" xMidYMid meet "
+                    class=" "
+                    version=" 1.1 "
+                    x="
+                  0px "
+                    y=" 0px "
+                    enable-background=" new 0 0 8 13
+                  "
+                  >
+                    <title>tail-out</title>
+                    <path
+                      opacity=" 0.13 "
+                      d=" M5.188,
+                1H0v11.193l6.467-8.625 C7.526, 2.156, 6.958, 1, 5.188,
+                1z "
+                    ></path>
+                    <path
+                      fill=" currentColor "
+                      d=" M5.188,
+                0H0v11.193l6.467-8.625C7.526, 1.156, 6.958, 0, 5.188,
+                0z "
+                    ></path>
+                  </svg>
+                </span>
+              </div>
+              <div
+                class="chatbox__msglog__msgbox chatbox__msglog__msgbox--other"
+              >
+                <span class="msg">
+                  <p class="msg__txt">Genial!. Yo estoy en las mismas</p>
+                  <span class="msg__timestatus">
+                    <p>22:35</p>
+                    <img src="../img/blue-double-tick.png" alt="read message" />
+                  </span>
+                </span>
+                <svg
+                  viewBox="0 0 8 13"
+                  height="13"
+                  width="8"
+                  preserveAspectRatio="xMidYMid meet"
+                  class="tail-in"
+                  version="1.1"
+                  x="0px"
+                  y="0px"
+                  enable-background="new 0 0 8 13"
+                >
+                  <title>tail-in</title>
+                  <path
+                    opacity="0.13"
+                    fill="#0000000"
+                    d="M1.533,3.568L8,12.193V1H2.812 C1.042,1,0.474,2.156,1.533,3.568z"
+                  ></path>
+                  <path
+                    fill="currentColor"
+                    d="M1.533,2.568L8,11.193V0L2.812,0C1.042,0,0.474,1.156,1.533,2.568z"
+                  ></path>
+                </svg>
+              </div>
+              <div
+                class="chatbox__msglog__msgbox chatbox__msglog__msgbox--self"
+              >
+                <span class="msg">
+                  <p class="msg__txt">Hoy</p>
+                  <span class="msg__timestatus">
+                    <p>22:35</p>
+                    <img src="../img/blue-double-tick.png" alt="read message" />
+                  </span>
+                </span>
+                <span class="tail-out"
+                  ><svg
+                    viewBox=" 0 0 8 13 "
+                    height=" 13 "
+                    width="
+                  8 "
+                    preserveAspectRatio=" xMidYMid meet "
+                    class=" "
+                    version=" 1.1 "
+                    x="
+                  0px "
+                    y=" 0px "
+                    enable-background=" new 0 0 8 13
+                  "
+                  >
+                    <title>tail-out</title>
+                    <path
+                      opacity=" 0.13 "
+                      d=" M5.188,
+                1H0v11.193l6.467-8.625 C7.526, 2.156, 6.958, 1, 5.188,
+                1z "
+                    ></path>
+                    <path
+                      fill=" currentColor "
+                      d=" M5.188,
+                0H0v11.193l6.467-8.625C7.526, 1.156, 6.958, 0, 5.188,
+                0z "
+                    ></path>
+                  </svg>
+                </span>
+              </div>
+              <div
+                class="chatbox__msglog__msgbox chatbox__msglog__msgbox--other"
+              >
+                <span class="msg">
+                  <p class="msg__txt">Ya terminaste?</p>
+                  <span class="msg__timestatus">
+                    <p>22:35</p>
+                    <img src="../img/blue-double-tick.png" alt="read message" />
+                  </span>
+                </span>
+                <svg
+                  viewBox="0 0 8 13"
+                  height="13"
+                  width="8"
+                  preserveAspectRatio="xMidYMid meet"
+                  class="tail-in"
+                  version="1.1"
+                  x="0px"
+                  y="0px"
+                  enable-background="new 0 0 8 13"
+                >
+                  <title>tail-in</title>
+                  <path
+                    opacity="0.13"
+                    fill="#0000000"
+                    d="M1.533,3.568L8,12.193V1H2.812 C1.042,1,0.474,2.156,1.533,3.568z"
+                  ></path>
+                  <path
+                    fill="currentColor"
+                    d="M1.533,2.568L8,11.193V0L2.812,0C1.042,0,0.474,1.156,1.533,2.568z"
+                  ></path>
+                </svg>
+              </div>
+            </div>
+          </div>
           <div class="chatbox__footer">
             <div class="chatbox__footer__moreoptionsicon">
               <svg
