--- a/index.html
+++ b/index.html
@@ -304,13 +304,13 @@
                           <span
                             aria-label=" Leído "
                             data-icon="msg-dblcheck"
-                            class="x1q15gih"
+                            class=""
                             ><svg
                               viewBox="0 0 16 11"
                               height="11"
                               width="16"
                               preserveAspectRatio="xMidYMid meet"
-                              class="double__tick double__tick--read"
+                              class="double__tick double__tick--unread"
                               fill="none"
                             >
                               <title>msg-dblcheck</title>
@@ -321,11 +321,11 @@
                             </svg>
                           </span>
                         </div>
-                        <p>Hablamos cuando llegues</p>
+                        <p>Si, acabo de terminar!</p>
                       </span>
                     </div>
                     <div class="card__side">
-                      <p class="card__side__time">10:45</p>
+                      <p class="card__side__time">22:37</p>
                       <div class="card__side__extra">
                         <svg
                           viewBox="0 0 19 20"
@@ -379,11 +379,13 @@
                             </svg>
                           </span>
                         </div>
-                        <p>Hablamos cuando llegues</p>
+                        <p>
+                          Hola, recorda que hoy tenemos la reunión de trabajo
+                        </p>
                       </span>
                     </div>
                     <div class="card__side">
-                      <p class="card__side__time">10:45</p>
+                      <p class="card__side__time">13:45</p>
                       <div class="card__side__extra">
                         <div class="sidebar__newmsgicon">1</div>
                         <svg
@@ -417,11 +419,13 @@
                     <div class="card__info__wrapper">
                       <h3 class="card__info__username">Pedro</h3>
                       <span class="card__info__msg">
-                        <div class="card__info__msg__status">
+                        <div
+                          class="card__info__msg__status card__info__msg__status--notick"
+                        >
                           <span
                             aria-label=" Leído "
                             data-icon="msg-dblcheck"
-                            class="x1q15gih"
+                            class=""
                             ><svg
                               viewBox="0 0 16 11"
                               height="11"
@@ -438,11 +442,11 @@
                             </svg>
                           </span>
                         </div>
-                        <p>Hablamos cuando llegues</p>
+                        <p>Buenas, te puedo llamar?</p>
                       </span>
                     </div>
                     <div class="card__side">
-                      <p class="card__side__time">10:45</p>
+                      <p class="card__side__time">13:00</p>
                       <div class="card__side__extra">
                         <svg
                           viewBox="0 0 19 20"
@@ -479,13 +483,13 @@
                           <span
                             aria-label=" Leído "
                             data-icon="msg-dblcheck"
-                            class="x1q15gih"
+                            class=""
                             ><svg
                               viewBox="0 0 16 11"
                               height="11"
                               width="16"
                               preserveAspectRatio="xMidYMid meet"
-                              class="double__tick double__tick--read"
+                              class="double__tick double__tick--unread"
                               fill="none"
                             >
                               <title>msg-dblcheck</title>
@@ -496,11 +500,11 @@
                             </svg>
                           </span>
                         </div>
-                        <p>Hablamos cuando llegues</p>
+                        <p>Buenas, como sigue el proyecto?</p>
                       </span>
                     </div>
                     <div class="card__side">
-                      <p class="card__side__time">10:45</p>
+                      <p class="card__side__time">15:15</p>
                       <div class="card__side__extra">
                         <svg
                           viewBox="0 0 19 20"
