fixed minor issues

--- a/pages/chat-test.html
+++ b/pages/chat-test.html
@@ -362,7 +362,7 @@
                           <span
                             aria-label=" Leído "
                             data-icon="msg-dblcheck"
-                            class="x1q15gih"
+                            class=""
                             ><svg
                               viewBox="0 0 16 11"
                               height="11"
@@ -558,7 +558,7 @@
                     <span
                       aria-label=" Leído "
                       data-icon="msg-dblcheck"
-                      class="x1q15gih"
+                      class=""
                       ><svg
                         viewBox="0 0 16 11"
                         height="11"
