--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                           </span>
                         </div>
                         <p>
-                          Hola, recorda que hoy tenemos la reunión de trabajo
+                          Hola, recordá que hoy tenemos la reunión de trabajo
                         </p>
                       </span>
                     </div>
